[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze"
authors = [
    {name = "Jimmy Truong", email = "simeon.wong@mail.utoronto.ca"},
]
description = "A very basic Python package"
version = "0.1.0"
dependencies = ["matplotlib", "numpy"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
my_hello_world = "mymodule:hello_world"
