[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze"
authors = [
    {name = "Jimmy Truong", email = "jw.truong@mail.utoronto.ca"},
]
description = "A very basic Python package"
version = "1.0.0"
dependencies = ["matplotlib", "numpy", "pandas", "requests"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
notify_done = "anayze:notify_done"
