[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze"
authors = [
    {name = "Jimmy Truong", email = "jw.truong@mail.utoronto.ca"},
]
description = "A very basic Python package"
version = "1.0.0"
dependencies = ["matplotlib", "numpy", "pandas", "requests"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
notify_done = "analyze:notify_done"
load_data = "analyze:load_data"
compute_analysis = "analyze:compute_analysis"
plot_data = "analyze:plot_data"
